cabal-version:   3.4
name:            receipts
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Stephen Onnen
maintainer:      stephen.onnen@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common options
  ghc-options:      -Wall
  default-language: GHC2021
  build-depends:
    , aeson       >=2.2.3.0
    , base        ^>=4.20.0.0
    , bytestring  >=0.12.1.0

library riot
  import:          options
  hs-source-dirs:  lib
  exposed-modules: 
    Riot
    Riot.Client
    Riot.Config
  build-depends:
    , text                >=2.1.1
    , http-conduit >= 2.3.9.1
    , http-client-tls     >=0.3.6.3
    , http-client >= 0.7.18

executable receipts
  import:         options
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , crypton-connection  >=0.4.1
    , receipts:riot

  hs-source-dirs: app
